# Algorithms

./: CMakeLists.txt  CountriesList.cpp
Indiv1/: CMakeLists.txt  main.cpp
Indiv1/CountryList/: CountryList.cpp  CountryList.h
Indiv1/handlers/: handlers.cpp  handlers.h
Indiv1_correct/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Indiv1_correct/handlers/: handlers.cpp  handlers.h  menu.cpp  menu.h
Indiv2/: CMakeLists.txt  Schedule.cpp  Schedule.h  main.cpp
Indiv3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt0/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt1/: functions.cpp  header.h
Prakt1/1/: CMakeLists.txt  functions.cpp  header.h  main.cpp
Prakt1/2/: CMakeLists.txt  main.cpp
Prakt1/3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt11/: CMakeLists.txt  main.cpp
Prakt12/: CMakeLists.txt  ExternalSort.cpp
Prakt2/: functions.cpp
Prakt2/1/: CMakeLists.txt  main.cpp
Prakt2/2/: CMakeLists.txt
Prakt2/3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt4/: 4_1.txt  CMakeLists.txt  functions.cpp  functions.h  main.cpp  recursion.cpp  recursion.h
Prakt4_3/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt5/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt6/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt7/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Prakt8/: CMakeLists.txt  main.cpp
