cmake_minimum_required(VERSION 3.29)
project(Algorithms)
add_subdirectory(
        Prakt0
)
add_subdirectory(
        Prakt2/1
)
add_subdirectory(
        Prakt2/2
)
add_subdirectory(
        Prakt2/3
)
add_subdirectory(
        Prakt3
)
add_subdirectory(
        Prakt4
)
add_subdirectory(
        Prakt4_3
)
add_subdirectory(
        Prakt5
)
